# make-notes-dataset

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md
notebooks/: 1.0-EDA-duplicates.ipynb  1.2-wy-EDA-plot-counts.ipynb  1.validation-Duplicates.ipynb  1.validation-MissingNotes.ipynb  1.validation-PlotNote_PatientCount.ipynb  template.ipynb
scripts/: drop_samples_outside_study_date.sh  extract_zip.sh  helper_deid.sh  job_template_deid.sh  main_deid.sh  merge_clean_notes.sh  merge_deid_notes.sh  process_notes.sh  pySLURMargs.py  sh_anchorNoteTreatmentDate.sh  sh_cleanNotes.sh  sh_dropSamplesOutsideStudyDate.sh  sh_extractMetaDataCSV.sh  sh_extractMetaMissingNotes.sh  sh_extractPatientIDJSON.sh  sh_mergeMissingNotes.sh  sh_mergeNotes.sh  sh_mergePatientListJSON.sh  sh_processClinicalNotes.sh  sh_processMissingNotes.sh  train_model.py
scripts/deid/: helper_deid.sh  main_deid.sh  merge_deid_notes.sh
scripts/extract/: build_last_updated.sh  drop_samples_outside_study_date.sh  extract_zip.sh
src/: __init__.py  anchorNoteTreatmentDate.py  deid_forward_pass.py  dropSamplesOutsideStudyDate.py  drop_samples_outside_study_date.py  extractMetaMissingNotes.py  extractPatientIDJSON.py  extract_zip.py  main_deid.py  mergePatientListJSON.py  merge_clean_notes.py  merge_deid_dataframes.py  processMissingNotes.py  process_clinical_notes.py  process_missing_notes.py  process_notes.py  util.py
src/deid/: deid_forward_pass.py  (+2 more)
tests/: conftest.py
(+22 files in other folders)
