[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "make-notes-dataset"
description = "Generate notes dataset of patients treated at Princess Margaret hospital"
version = "0.1.0"
authors = [
    { name = "Wayne Uy", email = "wayneisaacuy@gmail.com" }
    { name = "Kevin He", email = "Kevin.He@uhn.ca" },
]
dependencies = [
    "ml_common @ git+https://github.com/ml4oncology/ml-common.git"
]

[tool.setuptools]
package-dir = {"make_notes_dataset" = "src"}