[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "make-notes-dataset"
description = "Generate notes dataset of patients treated at Princess Margaret hospital"
readme = "README.md"
license = {file = "LICENSE.txt"}
version = "0.1.0"
authors = [
    { name = "Wayne Uy", email = "wayneisaac.uy@uhn.ca" }
]
dependencies = [
    "pandas",
    "numpy",
    "polars-lts-cpu==1.30.0",
    # Uncomment if actually still used:
    # "ml_common @ git+https://github.com/ml4oncology/ml-common.git"
]

[tool.setuptools.package-dir]
make_notes_dataset = "src"